# demo.Web.Host/controllers/age.go
@@ -4,12 +4,13 @@ import "github.com/gin-gonic/gin"
 import . "GoLangABP/demo.Web.Host/conf"
 import . "GoLangABP/demo.Core/Model"
 
+
 // AgeHandler
-// @Summary 获取最新age
-// @Tags AgeController 年龄相关
-// @Accept application/json
-// @Produce application/json
-// @Router /age [get]
+// @Summary  获取最新age
+// @Tags     AgeController 年龄相关
+// @Accept   application/json
+// @Produce  application/json
+// @Router   /age [get]
 func GetAgeHandler(c *gin.Context) {
 	Lock.RLock()
 	ret := Age
@@ -20,12 +21,12 @@ func GetAgeHandler(c *gin.Context) {
 }
 
 // AddAgeHandler AgeHandler
-// @Summary 设置最新age
-// @Tags AgeController 年龄相关
-// @Accept application/json
-// @Produce application/json
-// @Param object body AgeModel false "请求参数"
-// @Router /age [post]
+// @Summary  设置最新age
+// @Tags     AgeController 年龄相关
+// @Accept   application/json
+// @Produce  application/json
+
+// @Router   /age [post]
 func AddAgeHandler(c *gin.Context) {
 	ageModel := AgeModel{}
 	err := c.ShouldBind(&ageModel)
